Rewritten resources admin system

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="form-top-right">
-    <p><%= form.label :tag_names, t('.tags') %></p>
+    <p><%= form.label :tag_names, t('common.tags') %></p>
     <p><%= form.text_field :tag_names %></p>
 
     <% unless @tags.blank? %>
