--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,13 +6,7 @@
   </div>
 
   <div class="about-info">
-    <p>Вы посетили мой персональный веб-сайт. Я - Сергей Резванов, программист из России.</p>
-    <p>В настоящий момент я работаю в компании <a href="http://compassplus.com" target="blank">Compass Plus</a>, на должности программиста-аналитика. Основным инструментом в моей работе является СУБД Oracle со своими технологиями. Специализируюсь на разработке банковского программного обеспечения.</p>
-    <p>В остальное время пишу статьи и занимаюсь разработкой веб-приложений. Очень люблю язык Ruby, а каркасом для веб-программирования я выбрал популярный Ruby On Rails.</p>
-    <p>Ну и традиционно... Все материалы данного сайта (если это не указано в них явно) распространяются по лицензии <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons</a>. При их использовании в личных целях ссылка на источник обязательна.</p>
-    <br />
-    <p>С уважением, Сергей.</p>
-    <br />
+    <%= raw @about.body if @about %>
   </div>
 </div>
 
