--- a/app/views/admin/snippets/edit.html.erb
+++ b/app/views/admin/snippets/edit.html.erb
@@ -1,9 +1,8 @@
-<% content_for :title, title("#{t('head.title.edit')} '#{@project.title}'")  %>
+<% content_for :title, title("#{t('head.title.edit')} '#{@snippet.name}'")  %>
 
 <div class="form">
-  <%= form_for @project do |form| %>
+  <%= form_for [ :admin, @snippet ] do |form| %>
     <%= render :partial => 'form', :locals => { :form => form } %>
-
     <div class="form-buttons">
       <%= form.submit t('common.save'), :class => 'button' %>
       <%= link_to t('common.back'), :back %>
