--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="about">
   <div class="avatar">
-    <a href="http://www.flickr.com/photos/rezwyi/6620345855/" title="Self-portrait by rezwyi, on Flickr" target="blank"><img src="http://farm8.staticflickr.com/7145/6620345855_43c95e0d2d_n.jpg" width="320" height="320" alt="Self-portrait"></a>
+    <img src="/images/avatar.png" alt="Self-portrait">
   </div>
 
   <div class="about-info">
