--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -134,7 +134,7 @@ blockquote {
   float: left;
   clear: both;
   width: 890px;
-  margin: 30px 0 10px 0;
+  margin: 15px 0 10px 0;
   padding: 10px 10px 10px 0;
 }
 
@@ -258,6 +258,9 @@ nav.pagination span.gap {
   border: 5px solid #bdafac;
   border-radius: 15px 0 15px 15px;
   padding: 15px 15px 0px 15px;
+  box-shadow: 5px 5px 5px 0 #655f63;
+  -webkit-box-shadow: 5px 5px 5px 0 #655f63;
+  -moz-box-shadow: 5px 5px 5px 0 #655f63;
 }
 
 #login-form label, #login-form-modal label {
