Some markup fixes

--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
       <div class="manage-tabs">
         <ul>
-          <li<%= current_class(admin_posts_path) or current_class(admin_path) %>>
+          <li<%= current_class(admin_posts_path) %>>
             <%= link_to t('common.posts'), admin_posts_path %>
           </li>
           <li<%= current_class(admin_projects_path) %>>
