--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,7 +20,7 @@
         <%= link_to_unless current_page?(new_admin_project_path), t('.new_project'), new_admin_project_path %>
       </li>
       <li>
-        <%= link_to_unless current_page?(admin_path), t('.admin'), admin_path %>
+        <%= link_to_unless current_page?(admin_posts_path), t('.admin'), admin_posts_path %>
       </li>
       <li class="last">
         <%= link_to_unless current_page?(logout_path), t('.logout'), logout_path %>
