--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,21 +1,22 @@
-<div id="project-<%= project.id %>" class="project">
-  <div class="project-thumb">
-     <%= image_tag project.image_url %>
-  </div>
+<% projects.each do |p| %>
+  <li>
+    <div id="project-<%= p.id %>" class="project">
+      <%= image_tag p.screenshot.thumb.url if p.screenshot.present? %>
 
-  <div class="project-info">
-    <h1><%= link_to project.title, project %></h1>
-    <p><%= project.description %></p>
+      <div class="caption">
+        <h3><%= p.title %></h3>
+        <p><%= p.description %></p>
 
-    <div class="read-more">
-      <%= link_to t('.production_url'),
-                  project.production_url,
-                  :target => 'blank' if project.production_url.present? %>
-      <%= link_to t('.source_url'),
-                  project.source_url,
-                  :target => 'blank' if project.source_url.present? %>
+        <% if p.production_url.present? %>
+          <%= link_to t('.production_url'), p.production_url,
+                      :target => 'blank' %>
+        <% end %>
+
+        <% if p.source_url.present? %>
+          <%= link_to t('.source_url'), p.source_url,
+                     :target => 'blank' %>
+        <% end %>
+      </div>
     </div>
-  </div>
-</div>
-
-<div class="clear"></div>
+  </li>
+<% end %>
