--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,9 @@
 <% content_for :title, title(t('common.projects')) %>
 
-<%= render @projects %>
+<% @projects.each_slice(3) do |ps| %>
+  <ul class='project-thumbnails'>
+   <%= render :partial => 'project',
+              :locals => {:projects => ps} %>
+  </ul>
+  <div class="clear"></div>
+<% end %>
