--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="about">
   <div class="avatar">
-    <img src="/images/avatar.png" alt="Self-portrait">
+    <%= image_tag 'avatar.png' %>
   </div>
 
   <div class="about-info">
