--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,8 +1,8 @@
 <head>
   <title><%= yield :title %></title>
 
-  <%= javascript_include_tag :defaults, 'highlight.pack' %>
-  <%= stylesheet_link_tag 'application', 'zenburn' %>
+  <%= javascript_include_tag :application %>
+  <%= stylesheet_link_tag :application %>
   <%= csrf_meta_tag %>
 
   <link rel="shortcut icon" href="/favicon.ico" />
