--- a/app/views/admin/snippets/_snippet.html.erb
+++ b/app/views/admin/snippets/_snippet.html.erb
@@ -3,5 +3,10 @@
   <td><%= snippet.name %></td>
   <td><%= snippet.created_at.strftime(t('date.formats.datetime')) %></td>
   <td><%= link_to t('common.edit'), edit_admin_snippet_path(snippet) %></td>
-  <td><%= button_to t('common.destroy'), admin_snippet_path(snippet), :method => :delete, :class => 'button' %></td>
+  <td>
+    <%= button_to t('common.destroy'), admin_snippet_path(snippet),
+                  :method => :delete,
+                  :confirm => t(:really?),
+                  :class => 'button' %>
+  </td>
 </tr>
