--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,7 +52,8 @@ blockquote {
 }
 
 #logo {
-  font-size: 2em;
+  font-family: 'Allura', cursive;
+  font-size: 2.1em;
   font-weight: bold;
   float: left;
   padding: 30px 0 0 0;
