--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -7,6 +7,7 @@
 
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="alternate" type="application/rss+xml" href="<%= feed_posts_path %>" />
+  <link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
 
   <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 
