Replaced html date selector to datepicker in post form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -687,3 +687,8 @@ form.button_to input.button {
 form.button_to input.button:hover {
   background-color: #bd362f;
 }
+
+// Datepickers
+.ui-datepicker {
+  font-size: 0.6em;
+}
