--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -3,7 +3,8 @@
     <p><%= form.label :title, t('common.title') %></p>
     <p><%= form.text_field :title, :autofocus => true %></p>
     <p><%= form.label :published_at, t('common.published_at') %></p>
-    <p><%= form.date_select :published_at, :default => Time.now %></p>
+    <p><%= form.text_field :published_at, :value => Date.today.to_s,
+                           :role => 'datepicker' %></p>
   </div>
 
   <div class="form-top-right">
