Small markup fixes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -450,6 +450,11 @@ nav.pagination span.gap {
   margin: 10px 0 0 45px;
 }
 
+.post-content .gist {
+  font-size: 0.7em;
+  margin: 30px auto;
+}
+
 .tag-link {
   color:#fff;
   background-color: #49afcd;
