--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -430,7 +430,8 @@ nav.pagination span.gap {
 }
 
 .post-content img {
-  margin: 30px 0 30px 30px;
+  display: block;
+  margin: 30px 0 30px 0;
 }
 
 .post-content a, .post-comments a, #wmd-preview a, #footer a, 
