Some SEO optimization

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="about-info">
-    <%= raw @about.body if @about %>
+    <%= raw Snippet.find_by_name(:about).body %>
   </div>
 </div>
 
