--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -2,8 +2,8 @@
   <title><%= yield :title %></title>
   <meta name="description" content="<%= strip_tags Snippet.find_by_name(:about).body %>">
 
-  <%= javascript_include_tag :all %>
-  <%= stylesheet_link_tag :all %>
+  <%= javascript_include_tag :application %>
+  <%= stylesheet_link_tag :application %>
   <%= csrf_meta_tag %>
 
   <link rel="shortcut icon" href="/favicon.ico" />
