--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,26 +1,20 @@
 - content_for :title, title(t(:welcome))
 
-.about
-  .avatar = image_tag 'avatar.png'
+.page-home
+  .items
+    h2.title = t('.projects')
+    - @projects.each do |p|
+      .item
+        = link_to p.production_url, p.production_url, :target => '_blank'
+        | &nbsp;
+        = p.description
 
-  .about-info
-    = raw Snippet.find_by_name(:about).body
-
-.activity
-  .recently-items.left
-    h3 = t('.recently_posts')
-
-    ol
-      - @posts.each do |post|
-        li = link_to post.title, post
-      li.last = link_to t('.show_all'), posts_path
-
-  .recently-items.right
-    h3 = t('.recently_projects')
-
-    ol
-      - @projects.each do |project|
-        li
-          = link_to_if project.production_url.present?, project.title,
-                       project.production_url, :target => '_blank'
-      li.last = link_to t('.show_all'), projects_path
+  .items
+    h2.title = t('.posts')
+    - @posts.each do |post|
+      .item 
+        = link_to post.title, post
+        | &nbsp;
+        .pubdate
+          = Russian::strftime post.published_at, t('date.formats.default')
+        
