--- a/app/assets/stylesheets/layouts/application.css.scss
+++ b/app/assets/stylesheets/layouts/application.css.scss
@@ -7,7 +7,7 @@ body {
 a {
   color: #655f63;
   text-decoration: none;
-  &[role] {
+  &[class*='js'] {
     border-bottom: 1px dashed;
     &:hover {
       border-bottom: none;
