--- a/app/assets/stylesheets/components/modal.css.scss
+++ b/app/assets/stylesheets/components/modal.css.scss
@@ -9,19 +9,24 @@
   font-size: 1.3em;
   width: 100%;
   height: 100%;
-  z-index: 999;
+  z-index: 1000;
   > .window {
     position: relative;
     background-color: white;
     box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.8);
-    border-radius: 3px;
-    width: 400px;
+    border-radius: 6px;
+    width: 300px;
     margin: 60px auto;
-    padding: 35px 15px 15px 15px;
+    padding: 60px 30px 30px 30px;
     > .close {
       position: absolute;
-      top: 5px;
-      right: 15px;
+      top: 10px;
+      right: 30px;
+    }
+    > .title {
+      position: absolute;
+      top: 10px;
+      font-weight: bold;
     }
     > .body {
     }  
