--- a/app/assets/stylesheets/layouts/application.css.scss
+++ b/app/assets/stylesheets/layouts/application.css.scss
@@ -1,28 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  font-family: tahoma;
-  font-size: 0.9em;
+  font-family: Verdana, tahoma, sans-serif;
+  font-size: 14px;
   color: #655f63;
 }
 
 a {
   color: #655f63;
   text-decoration: none;
-  &[class*='js'] {
-    border-bottom: 1px dashed;
-    &:hover {
-      border-bottom: none;
-    }
-  }
-  &.login, &.logout {
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
 }
 
 textarea, input, select {
-  font-size: 0.7em;
+  font-size: 0.8em;
   font-family: inherit;
+  border: 1px solid rgba(0,0,0,0.1);
 }
 
 blockquote {
@@ -33,35 +28,58 @@ blockquote {
   padding: 15px 15px 25px 15px;
 }
 
-.right {
-  float: right;
+.button {
+  color: #dd4d42;
+  background-color: rgba(0,0,0,0);
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  &:hover {
+    text-decoration: none;
+  }
 }
 
-.left {
-  float: left;
-}
-
-.clear {
-  display: block;
-  clear: both;
-}
-
-* {
-  margin: 0;
-  padding: 0;
+.auth {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  font-size: 0.8em;
+  > a {
+    border-bottom: 1px dashed;
+    &:hover {
+      border-bottom: none;
+    }
+  }
 }
 
 .layout {
-  width: 900px;
+  max-width: 800px;
   margin: 0 auto;
   position: relative;
+  a {
+    color: #dd4d42;
+    &:hover{
+      background-color: #dd4d42;
+      color: #fff;
+    }
+    &[class*='js'], &[data-remote='true'] {
+      border-bottom: 1px dashed;
+      &:hover {
+        border-bottom: none;
+      }
+    }
+  }
   > .logo {
-    font-size: 4em;
+    font-size: 3em;
     font-family: 'Allura', cursive;
     font-weight: bold;
     float: left;
     a {
       color: #dd4d42;
+      &:hover{
+        background-color: #fff;
+        color: #dd4d42;
+      }
     }
     span {
       color: #655f63;
@@ -72,56 +90,14 @@ blockquote {
   }
   > .content {
     background: #fff;
-    margin: 30px 0 0 280px;
-    a {
-      text-decoration: none;
-      color: #dd4d42;
-      &:hover{
-        background-color: #dd4d42;
-        color: #fff;
-      }
-    }
+    margin: 45px 0 0 200px;
   }
   > .footer {
     clear: both;
     height: 30px;
     margin: 60px 0 30px 0;
-    > .copyright {
+    > * {
       display: inline-block;
-      vertical-align: middle;
-    }
-    img {
-      vertical-align: middle;
     }
   }
-}
-
-.login-form-buttons {
-  margin: 30px 0 30px 0;
-}
-
-.login-form-buttons a {
-  color: #655f63;
-  font-size: 0.7em;
-}
-
-.button {
-  font-size: 15px;
-  color: #fff;
-  background-color: #bdafac;
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
-}
-
-.button:hover {
-  background-color: #726d74;
-}
-
-a.button {
-  font-size: 0.6em;
-}
-
-a.button:hover {
-  text-decoration: none;
 }
