--- a/app/assets/stylesheets/layouts/application.css.scss
+++ b/app/assets/stylesheets/layouts/application.css.scss
@@ -43,9 +43,14 @@ blockquote {
   position: absolute;
   top: 6px;
   right: 6px;
-  font-size: 0.8em;
-  > a {
+  a {
+   font-size: 0.8em; 
+  }
+  a, input[type="submit"] {
+    background-color: rgba(0,0,0,0);
+    border: none;
     border-bottom: 1px dashed;
+    cursor: pointer;
     &:hover {
       border-bottom: none;
     }
@@ -62,7 +67,7 @@ blockquote {
       background-color: #dd4d42;
       color: #fff;
     }
-    &[class*='js'], &[data-remote='true'] {
+    &[class*="js"], &[data-remote="true"] {
       border-bottom: 1px dashed;
       &:hover {
         border-bottom: none;
