Improve footer text

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -38,4 +38,4 @@ html{lang='#{I18n.locale}'}
          
       .footer
         .copyright
-          = "#{t(:copyright)} #{copyright_years}"
+          | © #{copyright_years} ॐ मणि पद्मे हूँ
