--- a/app/assets/stylesheets/components/flash.css.scss
+++ b/app/assets/stylesheets/components/flash.css.scss
@@ -1,22 +1,24 @@
 .component-flash {
   position: fixed;
-  color: #fff;
   font-size: 0.9em;
   top: -1000px;
   right: 0;
   left: 0;
-  z-index: 999;
+  z-index: 9999;
   &.noscript {
     top: 5px;
   }
   > .body {
     opacity: 0.7;
     box-shadow: 3px 3px 5px #d5d5d5;
+    border: none;
     border-radius: 6px;
+    color: #fff;
     width: 500px;
     margin: 0 auto;
     padding: 10px 12px;
     text-align: center;
+    text-shadow: none;
     &.notice {
       background-color: #468847;
     }
