Add ability to manage blog posts

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,6 +22,7 @@ html{lang='#{I18n.locale}'}
 
     .auth
       - if current_user
+        = link_to t('common.cms'), admin_posts_path
         = link_to t('common.logout'), logout_path, :method => :delete
       - else
         = link_to t('.login'), login_path, :class => 'js-in-modal', :data => {:title => 'Вход'}
