--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -2,7 +2,7 @@
 
 .page-home
   .items
-    h2.title = t('.projects')
+    h2.title = t('common.projects')
     - @projects.each do |p|
       .item
         = link_to p.production_url, p.production_url, :target => '_blank'
@@ -10,7 +10,7 @@
         = p.description
 
   .items
-    h2.title = t('.posts')
+    h2.title = t('common.posts')
     - @posts.each do |post|
       .item 
         = link_to post.title, post
